--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,7 +77,7 @@ header h1 {
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
-  width: 540px;
+  width: 700px;
 }
 
 header h2 {
@@ -101,7 +101,7 @@ header h2 {
 }
 
 #main-content {
-  width: 690px;
+  width: 85%;
   float: left;
 }
 
